--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@thumbmarkjs/react",
-  "version": "1.0.0",
+  "version": "1.0.0-rc.1",
   "description": "React integration for ThumbmarkJS",
-  "main": "dist/index.js",
+  "type": "module",
+  "main": "dist/index.esm.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -16,16 +17,27 @@
     "clean": "rm -rf dist"
   },
   "peerDependencies": {
-    "@thumbmarkjs/thumbmarkjs": "^1.0.0",
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "@thumbmarkjs/thumbmarkjs": "^1.3.0",
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
-    "@rollup/plugin-typescript": "^11.0.0",
-    "@types/react": "^18.0.0",
-    "react": "^18.0.0",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "jest": "^30.1.1",
+    "jest-environment-jsdom": "^30.1.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "rollup": "^4.0.0",
     "rollup-plugin-dts": "^6.0.0",
+    "ts-jest": "^29.4.1",
+    "tslib": "^2.6.0",
     "typescript": "^5.0.0"
   },
   "repository": {
