--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -10,12 +10,13 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "noEmit": false,
-    "jsx": "react-jsx",
+    "jsx": "react",
     "declaration": true,
-    "declarationDir": "./dist/types",
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "rootDir": ".",
+    "baseUrl": "."
   },
   "include": [
     "src"
