--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@thumbmarkjs/vue",
-  "version": "1.0.0",
+  "version": "1.0.0-rc.1",
   "description": "Vue integration for ThumbmarkJS",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -16,16 +17,23 @@
     "clean": "rm -rf dist"
   },
   "peerDependencies": {
-    "@thumbmarkjs/thumbmarkjs": "^1.0.0",
+    "@thumbmarkjs/thumbmarkjs": "^1.3.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-typescript": "^11.0.0",
-    "vue": "^3.0.0",
+    "@types/jest": "^30.0.0",
+    "@vue/test-utils": "^2.4.6",
+    "jest": "^30.1.1",
+    "jest-environment-jsdom": "^30.1.1",
     "rollup": "^4.0.0",
     "rollup-plugin-dts": "^6.0.0",
-    "typescript": "^5.0.0"
+    "ts-jest": "^29.4.1",
+    "tslib": "^2.6.0",
+    "typescript": "^5.0.0",
+    "vue": "^3.0.0"
   },
   "repository": {
     "type": "git",
