expose components with react

--- a/examples/vue-app/package.json
+++ b/examples/vue-app/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@thumbmarkjs/thumbmarkjs": "file:../../../thumbmarkjs",
-    "@thumbmarkjs/vue": "1.0.0-beta.4",
+    "@thumbmarkjs/vue": "1.0.0-rc.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
