--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thumbmarkjs/react",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.1",
   "description": "React integration for ThumbmarkJS",
   "type": "module",
   "main": "dist/index.esm.js",
