--- a/examples/react-app/package.json
+++ b/examples/react-app/package.json
@@ -7,8 +7,8 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@thumbmarkjs/react": "^1.0.0-beta.3",
-    "@thumbmarkjs/thumbmarkjs": "file:../../../thumbmarkjs",
+    "@thumbmarkjs/react": "^1.0.1",
+    "@thumbmarkjs/thumbmarkjs": "1.3.3",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.12",
