--- a/examples/vue-app/package.json
+++ b/examples/vue-app/package.json
@@ -15,8 +15,8 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
-    "@thumbmarkjs/thumbmarkjs": "file:../../../thumbmarkjs",
-    "@thumbmarkjs/vue": "1.0.0-rc.1",
+    "@thumbmarkjs/thumbmarkjs": "^1.3.3",
+    "@thumbmarkjs/vue": "^1.0.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
