--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thumbmarkjs/vue",
-  "version": "1.0.0-rc.2",
+  "version": "1.0.1",
   "description": "Vue integration for ThumbmarkJS",
   "type": "module",
   "main": "dist/index.js",
@@ -17,7 +17,7 @@
     "clean": "rm -rf dist"
   },
   "peerDependencies": {
-    "@thumbmarkjs/thumbmarkjs": "^1.3.0",
+    "@thumbmarkjs/thumbmarkjs": "^1.3.3",
     "vue": "^3.0.0"
   },
   "devDependencies": {
